tests/baselines/reference/tsxUnionElementType2.errors.txt
tests/cases/conformance/jsx/file.tsx(12,10): error TS2322: Type 'string' is not assignable to type 'number | boolean'.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    import React = require('react');
    
    function SFC1(prop: { x: number }) {
        return <div>hello</div>;
    };
    
    function SFC2(prop: { x: boolean }) {
        return <h1>World </h1>;
    }
    
    var SFCComp = SFC1 || SFC2;
    <SFCComp x={"hi"}/>
             ~
!!! error TS2322: Type 'string' is not assignable to type 'number | boolean'.
!!! related TS6500 tests/cases/conformance/jsx/file.tsx:3:23: The expected type comes from property 'x' which is declared here on type '(IntrinsicAttributes & { x: number; }) | (IntrinsicAttributes & { x: boolean; })'